--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "tokenbot",
+  "token": "ODc5MzkyNTA5NDAxMzY2NTQ4.YSPEGA.tM04aJQvqBv_4vXpV3l2WR7Nj-Q",
   "servers": ["id servar", "id servar"],
   "roleName": "babaalfa",
   "colors": 12,
