--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "ODc5MzkyNTA5NDAxMzY2NTQ4.YSPEGA.tM04aJQvqBv_4vXpV3l2WR7Nj-Q",
+  "token": "NzQ4NjE0OTM1MjY0NzU1NzE0.X0f__Q.vfZRLqgaLoqqzqZ-oU-rNZolZVs",
   "servers": ["id servar", "id servar"],
   "roleName": "babaalfa",
   "colors": 12,
